# openlms

./: .env  Cargo.toml  README.md  docker-compose.yml
migrations/2022-11-27-101139_create_users/: up.sql
openlms-admin/: Cargo.toml
openlms-admin/src/: cli.rs  main.rs
openlms-admin/src/commands/: mod.rs  user.rs
openlms-server/: Cargo.toml
openlms-server/src/: main.rs
src/: schema.rs
src/models/: mod.rs  user.rs
