[package]
name = "openlms-core"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
clap = { version = "4.0", features = ["derive"] }
diesel = { version = "2.0", features = ["postgres", "chrono"] }
dotenvy = "0.15"
once_cell = "1.16"
rand = "0.8"
rust-argon2 = "1.0"
thiserror = "1.0"

[workspace]
default-members = ["openlms-server", "openlms-admin"]
members = ["openlms-server", "openlms-admin"]
